<resources>
    <string name="app_name">Guitar SongBook</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="page_title">Title</string>
    <string name="search">Search</string>
    <string name="more">More</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="band">Band</string>
    <string name="song">Song</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="change_font_size">Change font size</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="message">Message</string>

    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_theme">Choose theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="ok">OK</string>
    <string name="use_system_theme">Use system theme</string>
    <string name="change_text_size">Change text size</string>
    <string name="very_small">Very small</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="exit">Exit</string>
    <string name="exit_confirmation">Are you sure want to close the application?</string>
    <string name="change_scroll_speed_layout_visibility">Change scroll speed layout visibility</string>
    <string name="start">Start</string>
    <string name="hide_scroll_speed_control">Hide scroll speed control</string>
    <string name="show_scroll_speed_control">Show scroll speed control</string>
</resources>