<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:visible="false"/>

    <item
        android:id="@+id/action_add_to_favorite"
        android:checkable="true"
        android:contentDescription="@string/title_favorite"
        android:icon="@drawable/ic_favorite_unchecked"
        android:title="@string/title_favorite"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_change_text_size"
        android:contentDescription="@string/change_font_size"
        android:icon="@drawable/ic_font_size"
        android:title="@string/change_font_size"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_start"
        android:contentDescription="@string/start"
        android:icon="@drawable/ic_play"
        android:title="@string/start"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_change_scroll_speed_layout_visibility"
        android:contentDescription="@string/change_scroll_speed_layout_visibility"
        android:title="@string/change_scroll_speed_layout_visibility"
        app:showAsAction="never"
        android:visible="false"
        />
</menu>