<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.songbook.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_songsFragment"
            app:destination="@id/songsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.songbook.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_songsFragment"
            app:destination="@id/songsFragment" />
        <action
            android:id="@+id/action_navigation_favorite_to_favoriteSongsFragment"
            app:destination="@id/favoriteSongsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.songbook.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/songsFragment"
        android:name="com.example.songbook.ui.songs.SongsFragment"
        android:label="{bandName}"
        tools:layout="@layout/fragment_songs" >
        <argument
            android:name="bandWithSongs"
            app:argType="com.example.songbook.data.relations.BandWithSongs" />
        <argument
            android:name="bandName"
            app:argType="string"/>
        <action
            android:id="@+id/action_songsFragment_to_singleSongFragment"
            app:destination="@id/singleSongFragment" />
    </fragment>
    <fragment
        android:id="@+id/singleSongFragment"
        android:name="com.example.songbook.ui.singleSong.SingleSongFragment"
        android:label="{songName}"
        tools:layout="@layout/fragment_single_song" >
        <argument
            android:name="song"
            app:argType="com.example.songbook.data.Song"/>
        <argument
            android:name="songName"
            app:argType="string"/>
    </fragment>
    <fragment
        android:id="@+id/favoriteSongsFragment"
        android:name="com.example.songbook.ui.favorite.FavoriteSongsFragment"
        android:label="{bandName}"
        tools:layout="@layout/fragment_favorite_songs" >
        <argument
            android:name="bandWithSongs"
            app:argType="com.example.songbook.data.relations.BandWithSongs" />
        <argument
            android:name="bandName"
            app:argType="string"/>
        <action
            android:id="@+id/action_favoriteSongsFragment_to_singleSongFragment"
            app:destination="@id/singleSongFragment" />
    </fragment>

</navigation>